# cognify

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: publish.yml
cognify/: __init__.py
cognify/vector_store/: __init__.py  main.py
